--- a/sass/main.scss
+++ b/sass/main.scss
@@ -636,7 +636,7 @@ $ft:20px;
     }
   }
 }
-.bottom{ 
+.bottom{
   background-color: #ffffff;
   overflow: hidden;
   .baoxiu{
@@ -738,5 +738,14 @@ $ft:20px;
 
       }
     }
+  }
+}
+.bottomLogo{ 
+  margin: 0 auto;
+  width: 1226px;
+  height: 80px;
+  div{
+    float: left;
+    margin-top: 10px;
   }
 }
