--- a/css/main.css
+++ b/css/main.css
@@ -166,10 +166,11 @@
           .MainMenu .MainMenuRight ul li .MenuCenter span {
             float: left;
             margin-top: 20px;
-            margin-left: 20px;
-            width: 280px; }
+            margin-left: 40px;
+            width: 260px; }
             .MainMenu .MainMenuRight ul li .MenuCenter span img {
-              width: 50px; }
+              width: 50px;
+              margin-right: 18px; }
   .MainMenu .slider {
     overflow: hidden;
     float: left;
